--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "lint": "yarn add -D prettier && yarn add -D @babel/eslint-parser @babel/preset-react && npx install-peerdeps --dev eslint-config-airbnb && yarn add -D eslint-config-prettier eslint-plugin-prettier"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "bootstrap-icons": "^1.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-sparklines": "^1.7.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
