--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.2.1",
     "react-sparklines": "^1.7.0"
   },
   "devDependencies": {
